fix : fixed white space in mobile view

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,11 @@ body {
   transition: all 0.3s linear;
   height: 0;
 }
-
+body, html {
+  margin: 0; /* Remove default margin */
+  padding: 0; /* Remove default padding */
+  overflow-x: hidden; /* Prevent horizontal overflow */
+}
 .hero-content {
   margin-top: 130px;
 }
